package edu.austral.ingsis.clifford.fileSystem;

public interface Node {
    String getName();
}
